fix swegaer comment ecopedia
